test/types/atomic/sungeun/no_atomic_assign.chpl
config type myType = bool;
var x: atomic myType;
x.read();
x = 0:myType;
